# chrono_pendulum

./: Demo_Pendulum.py  README.md  bridge_node.py  chrono_pendulum.py  pendulum_plot.py  pendulum_stack.sh  plot_pendulum.py  pyproject.toml
configs/: default_pendulum.json
docs/: developer_guide.md
host/: ARCHITECTURE.md  README.md  RL_fitting.py  RVIZ_REPLACEMENT_ARCHITECTURE.md  SIGNAL_PIPELINE_NOTES.md  blackbox_sindy.py  calibration.py  chrono_pendulum.py  chrono_run_9.csv  demo_MBS_friction.py  imu_viewer.py  inertia_com_calculator.py  llm_config.example.json  model_parameter.latest.json  model_parameter.template.json  motor_torque.json  motor_torque_analysis.py  nnarx_sindy_ppo_benchmark.py  offline_id_pem_sindy_ppo.py  offline_identification_benchmark.py  pendulum_stack.sh  plot_pendulum.py  replay_pendulum_cli.py  replay_pendulum_export.py  replay_pendulum_viewer.py  rviz_calibration_node.py  stage1_cmaes_chrono.py  stage1_pem_entry.py  stage1_regression.py  stage2_dataset.py  stage2_feature_map.py  stage2_residual_target.py  stage2_settings.py  stage2_sindy.py  stage2_sindy_entry.py  stage3_ppo_entry.py  stage3_sb3_ppo.py  staged_pendulum_calibration.py  state_estimator.py  system_identification.py  (+1 more)
host/backend/: __init__.py
host/chrono_core/: __init__.py  calibration_io.py  chrono_rigid_pendulum.py  config.py  csv_schema.py  dynamics.py  estimation.py  log_schema.py  (+9 more)
jetson/: README.md  bridge_node.py  live_monitor.py  motor_controller.ino  pendulum_controller.py  pendulum_stack.sh
motor_controller/: motor_controller.ino
tests/: test_segmentation.py
(+466 files in other folders)
