[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-pendulum-digital-twin"
version = "0.1.0"
description = "Physics-grounded sim-to-real digital twin for a 1-DOF Chrono pendulum"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
